err.out
src\render\textures\texturePack.cpp: In constructor 'TexturePack::TexturePack(const char*, ModelTexture*, ModelTexture*, ModelTexture*, ModelTexture*, ModelTexture*)':
src\render\textures\texturePack.cpp:5:137: error: no matching function for call to 'ModelTexture::ModelTexture()'
 TexturePack::TexturePack(const char* _name, ModelTexture* _k, ModelTexture* _r, ModelTexture* _g, ModelTexture* _b, ModelTexture* _blend)
                                                                                                                                         ^
In file included from src\render\textures\../engine/memoryManager.h:7:0,
                 from src\render\textures\texturePack.cpp:1:
src\render\textures\../engine/../textures/modelTexture.h:15:5: note: candidate: ModelTexture::ModelTexture(const char*, GLuint)
     ModelTexture(const char* _name, GLuint id);
     ^~~~~~~~~~~~
src\render\textures\../engine/../textures/modelTexture.h:15:5: note:   candidate expects 2 arguments, 0 provided
src\render\textures\../engine/../textures/modelTexture.h:10:7: note: candidate: ModelTexture::ModelTexture(const ModelTexture&)
 class ModelTexture
       ^~~~~~~~~~~~
src\render\textures\../engine/../textures/modelTexture.h:10:7: note:   candidate expects 1 argument, 0 provided
src\render\textures\texturePack.cpp:5:137: error: no matching function for call to 'ModelTexture::ModelTexture()'
 TexturePack::TexturePack(const char* _name, ModelTexture* _k, ModelTexture* _r, ModelTexture* _g, ModelTexture* _b, ModelTexture* _blend)
                                                                                                                                         ^
In file included from src\render\textures\../engine/memoryManager.h:7:0,
                 from src\render\textures\texturePack.cpp:1:
src\render\textures\../engine/../textures/modelTexture.h:15:5: note: candidate: ModelTexture::ModelTexture(const char*, GLuint)
     ModelTexture(const char* _name, GLuint id);
     ^~~~~~~~~~~~
src\render\textures\../engine/../textures/modelTexture.h:15:5: note:   candidate expects 2 arguments, 0 provided
src\render\textures\../engine/../textures/modelTexture.h:10:7: note: candidate: ModelTexture::ModelTexture(const ModelTexture&)
 class ModelTexture
       ^~~~~~~~~~~~
src\render\textures\../engine/../textures/modelTexture.h:10:7: note:   candidate expects 1 argument, 0 provided
src\render\textures\texturePack.cpp:5:137: error: no matching function for call to 'ModelTexture::ModelTexture()'
 TexturePack::TexturePack(const char* _name, ModelTexture* _k, ModelTexture* _r, ModelTexture* _g, ModelTexture* _b, ModelTexture* _blend)
                                                                                                                                         ^
In file included from src\render\textures\../engine/memoryManager.h:7:0,
                 from src\render\textures\texturePack.cpp:1:
src\render\textures\../engine/../textures/modelTexture.h:15:5: note: candidate: ModelTexture::ModelTexture(const char*, GLuint)
     ModelTexture(const char* _name, GLuint id);
     ^~~~~~~~~~~~
src\render\textures\../engine/../textures/modelTexture.h:15:5: note:   candidate expects 2 arguments, 0 provided
src\render\textures\../engine/../textures/modelTexture.h:10:7: note: candidate: ModelTexture::ModelTexture(const ModelTexture&)
 class ModelTexture
       ^~~~~~~~~~~~
src\render\textures\../engine/../textures/modelTexture.h:10:7: note:   candidate expects 1 argument, 0 provided
src\render\textures\texturePack.cpp:8:17: error: no match for 'operator=' (operand types are 'ModelTexture' and 'ModelTexture*')
     k = _k; r = _r; g = _g; b = _b;
                 ^~
In file included from src\render\textures\../engine/memoryManager.h:7:0,
                 from src\render\textures\texturePack.cpp:1:
src\render\textures\../engine/../textures/modelTexture.h:10:7: note: candidate: ModelTexture& ModelTexture::operator=(const ModelTexture&)
 class ModelTexture
       ^~~~~~~~~~~~
src\render\textures\../engine/../textures/modelTexture.h:10:7: note:   no known conversion for argument 1 from 'ModelTexture*' to 'const ModelTexture&'
src\render\textures\texturePack.cpp:8:25: error: no match for 'operator=' (operand types are 'ModelTexture' and 'ModelTexture*')
     k = _k; r = _r; g = _g; b = _b;
                         ^~
In file included from src\render\textures\../engine/memoryManager.h:7:0,
                 from src\render\textures\texturePack.cpp:1:
src\render\textures\../engine/../textures/modelTexture.h:10:7: note: candidate: ModelTexture& ModelTexture::operator=(const ModelTexture&)
 class ModelTexture
       ^~~~~~~~~~~~
src\render\textures\../engine/../textures/modelTexture.h:10:7: note:   no known conversion for argument 1 from 'ModelTexture*' to 'const ModelTexture&'
src\render\textures\texturePack.cpp:8:33: error: no match for 'operator=' (operand types are 'ModelTexture' and 'ModelTexture*')
     k = _k; r = _r; g = _g; b = _b;
                                 ^~
In file included from src\render\textures\../engine/memoryManager.h:7:0,
                 from src\render\textures\texturePack.cpp:1:
src\render\textures\../engine/../textures/modelTexture.h:10:7: note: candidate: ModelTexture& ModelTexture::operator=(const ModelTexture&)
 class ModelTexture
       ^~~~~~~~~~~~
src\render\textures\../engine/../textures/modelTexture.h:10:7: note:   no known conversion for argument 1 from 'ModelTexture*' to 'const ModelTexture&'
src\render\textures\texturePack.cpp: In destructor 'TexturePack::~TexturePack()':
src\render\textures\texturePack.cpp:16:40: error: no matching function for call to 'MemoryManager::deleteModelTexture(ModelTexture&)'
     MemoryManager::deleteModelTexture(r);
                                        ^
In file included from src\render\textures\texturePack.cpp:1:0:
src\render\textures\../engine/memoryManager.h:72:17: note: candidate: static void MemoryManager::deleteModelTexture(ModelTexture*)
     static void deleteModelTexture(ModelTexture* texture);
                 ^~~~~~~~~~~~~~~~~~
src\render\textures\../engine/memoryManager.h:72:17: note:   no known conversion for argument 1 from 'ModelTexture' to 'ModelTexture*'
src\render\textures\texturePack.cpp:17:40: error: no matching function for call to 'MemoryManager::deleteModelTexture(ModelTexture&)'
     MemoryManager::deleteModelTexture(g);
                                        ^
In file included from src\render\textures\texturePack.cpp:1:0:
src\render\textures\../engine/memoryManager.h:72:17: note: candidate: static void MemoryManager::deleteModelTexture(ModelTexture*)
     static void deleteModelTexture(ModelTexture* texture);
                 ^~~~~~~~~~~~~~~~~~
src\render\textures\../engine/memoryManager.h:72:17: note:   no known conversion for argument 1 from 'ModelTexture' to 'ModelTexture*'
src\render\textures\texturePack.cpp:18:40: error: no matching function for call to 'MemoryManager::deleteModelTexture(ModelTexture&)'
     MemoryManager::deleteModelTexture(b);
                                        ^
In file included from src\render\textures\texturePack.cpp:1:0:
src\render\textures\../engine/memoryManager.h:72:17: note: candidate: static void MemoryManager::deleteModelTexture(ModelTexture*)
     static void deleteModelTexture(ModelTexture* texture);
                 ^~~~~~~~~~~~~~~~~~
src\render\textures\../engine/memoryManager.h:72:17: note:   no known conversion for argument 1 from 'ModelTexture' to 'ModelTexture*'
src\render\textures\texturePack.cpp: In member function 'ModelTexture* TexturePack::getR() const':
src\render\textures\texturePack.cpp:37:12: error: cannot convert 'const ModelTexture' to 'ModelTexture*' in return
     return r;
            ^
src\render\textures\texturePack.cpp: In member function 'ModelTexture* TexturePack::getG() const':
src\render\textures\texturePack.cpp:43:12: error: cannot convert 'const ModelTexture' to 'ModelTexture*' in return
     return g;
            ^
src\render\textures\texturePack.cpp: In member function 'ModelTexture* TexturePack::getB() const':
src\render\textures\texturePack.cpp:49:12: error: cannot convert 'const ModelTexture' to 'ModelTexture*' in return
     return b;
            ^
make: *** [obj\render\textures\texturePack.o] Error 1
